# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-05-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_api functions service_subscriptions/2 and
      services_search/2 for services that use duo_mode set to true
    * Improve the internal service cloudi_service_terminate function
      execution time limit enforcement
    * Fix cloudi_service_http_cowboy bug during cloudi_service_init validation

2014-05-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix for websocket_protocol in cloudi_service_http_cowboy

2014-05-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the websocket_protocol configuration option to
      cloudi_service_http_cowboy for avoiding blocking on a response to an
      outgoing CloudI service request (due to no unique identifier
      (Transaction ID concept) being present in the WebSocket protocol).
      So, this allows a function that parses (transforms) the data from the
      WebSocket and provides a unique identifier with the protocol details
      inside the function.

2014-05-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update documentation

2014-05-19 Drew Varner     <drew.varner [at] ubnt (dot) com>

    * Add nonempty_list to cloudi_service_api typespecs

2014-05-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add use_websockets == exclusively for cloudi_service_http_cowboy to limit
      usage of a port to websockets-only
    * Add websocket_connect_async, websocket_connect_sync,
      websocket_disconnect_async, and websocket_disconnect_sync to
      cloudi_service_http_cowboy to handle (blocking) connection validation
      (i.e., synchronous connect service requests with
       websocket_connect_sync, websocket_connect remains the same as
       websocket_disconnect_async)
    * Make a custom status code work for websocket_connect usage
      (websocket_connect_async/websocket_connect_sync) in